2005-09-16  Ross Burton  <ross@burtonini.com>

	* src/devilspie-action-setwintype.gob:
	Handle the value being NULL, which happens on construction.

2005-07-27  Ross Burton  <ross@burtonini.com>

	* autogen.sh:
	* Makefile.am:
	Use Automake 1.6 instead of the ancient 1.4.

2005-06-12  Ross Burton  <ross@burtonini.com>

	* src/Makefile.am:
	Add xutils.[ch] to the sources for parser-test (Henrik Brix
	Andersen).

2005-06-08  Ross Burton  <ross@burtonini.com>

	* configure.in:
	Check for xsltproc.

2005-05-23  Ross Burton  <ross@burtonini.com>

	* src/flurb.c:
	Initialise the Exec action.

2005-05-04  Ross Burton  <ross@burtonini.com>

	* configure.in:
	* NEWS:
	Version 0.10.

2005-05-04  Ross Burton  <ross@burtonini.com>

	* src/doc-generator.c:
	Add the GParam minimum and maximum values to the XML.

	* docs2html.xsl:
	Display the minimum and maximum values.

2005-05-04  Ross Burton  <ross@burtonini.com>

	* src/xutils.c:
	* src/xutils.h:
	Add copy-and-paste implementations of the private functions
	_wnck_get_string_property_latin1() and _wnck_window_get_xscreen().
	
	* src/devilspie-action-debug.gob:
	* src/devilspie-action-decorate.gob:
	* src/devilspie-action-layer.gob:
	* src/devilspie-matcher-windowname.gob:
	Update to use above API calls.  Now works on GNOME 2.10! Many
	thanks to Crispin Flowerday <gnome@flowerday.cx> for the patch.

2005-05-02  Ross Burton  <ross@burtonini.com>

	* src/devilspie-action-opacity.gob:
	Add minimum and maximum value hints, and fix formatiing.

2005-04-29  Ross Burton  <ross@burtonini.com>

	* configure.in:
	* NEWS:
	Version 0.9.

2005-04-29  Ross Burton  <ross@burtonini.com>

	* configure.in:
	Check for wnck >= 2.9.92, as they need timestamps.

	* src/devilspie-action-resize.gob:
	If wnck >= 2.9.92, pass a timestamp when minimising.

2005-04-08  Ross Burton  <ross@burtonini.com>

	* src/Makefile.am:
	Add xutils.c to the doc-generator build.

2005-03-08  Ross Burton  <ross@burtonini.com>

	* src/xutils.[ch]: